# ApproxFlow

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Headers/: Common.h  FixedNum.h  NDArrayApproxCPU.h  NDArrayFloatCPU.h  NDArrayQuantCPU.h  Operator.h  OpsFloat.h  OpsQuant.h  Range.h  Ref.h  Thread.h  Timer.h  Variable.h
Headers/OpsFloat/: BasicArith.h  NeuralNet.h
Headers/OpsQuant/: BasicArith.h  NeuralNet.h
Tests/: TestFloatNN0.h  TestQuantArray0.h  Utils.h
Train/: CIFAR10.py  FashionMNIST.py  Layer.py  MNIST.py  Net.py  Preproc.py  Protocol.py  SVHN.py  forTest.py
Utils/: LUT_AC.txt  LUT_CR(C.6).txt  LUT_CR(C.7).txt  LUT_OU(L.1).txt  LUT_OU(L.3).txt  LUT_RoBA.txt  LUT_SDLC.txt  LUT_ours.txt  accurate.csv  approximate.csv  midapprox.csv
Weights/CIFAR10/: Conv1_activations.txt  Conv1_biases.txt  Conv1_weights.txt  Conv1a_activations.txt  Conv1a_biases.txt  Conv1a_weights.txt  Conv1b_activations.txt  Conv1b_biases.txt  Conv1b_weights.txt  Conv2_activations.txt  Conv2_biases.txt  Conv2_weights.txt  Conv2a_activations.txt  Conv2a_biases.txt  Conv2a_weights.txt  Conv2b_activations.txt  Conv2b_biases.txt  Conv2b_weights.txt  Conv3_activations.txt  Conv3_biases.txt  Conv3_weights.txt  Conv3a_activations.txt  Conv3a_biases.txt  Conv3a_weights.txt  Conv3b_activations.txt  Conv3b_biases.txt  Conv4a_activations.txt  Conv4a_biases.txt  Conv4a_weights.txt  Conv4b_activations.txt  Conv4b_biases.txt  Conv4b_weights.txt  FC1_activations.txt  FC1_biases.txt  FC1_weights.txt  FC2_activations.txt  FC2_biases.txt  FC_Logits_activations.txt  FC_Logits_biases.txt  (+4 more)
(+31 files in other folders)
